--- a/majorproject/src/main/resources/application.properties
+++ b/majorproject/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 
-spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.url=jdbc:mariadb:file:~/test
 spring.datasource.username=sa
 spring.datasource.data-password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name=mariadb.jdbc.Driver
 
 spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
-
