--- a/majorproject/src/main/resources/application.properties
+++ b/majorproject/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-
-spring.datasource.url=jdbc:mariadb:file:~/test
-spring.datasource.username=sa
-spring.datasource.data-password=
-spring.datasource.driver-class-name=mariadb.jdbc.Driver
-
-spring.h2.console.path=/h2-console
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/project
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
+spring.jpa.hibernate.dll-auto=create-drop
