--- a/majorproject/src/main/resources/application.properties
+++ b/majorproject/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/project
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.dll-auto=create-drop
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
