--- a/majorproject/src/main/resources/application.properties
+++ b/majorproject/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/project
+spring.profiles.active=@profileActive@
+spring.datasource.url=jdbc:h2:mem:testdb;
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
