--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,22 @@ orbs:
   aws-ecs: circleci/aws-ecs@1.3.0
   
 jobs:
+  test_frontend:
+    working_directory: ~/majorproject
+    docker:
+      - image: circleci/node:12
+    steps:
+      - checkout
+      - run:
+          name: Install npm dependencies
+          command: |
+            cd ~/majorproject/FrontEnd/project-app;npm install --save
+      - run: cd ~/majorproject/FrontEnd/project-app;npm test
+      - store_test_results:
+          path: test-results
+      - store_artifacts:
+          path: test-results
+  
   build_and_deploy:
     working_directory: ~/majorproject
     docker:
@@ -25,13 +41,13 @@ jobs:
           key: sept-fri-10-30-2-{{ checksum "~/majorproject/majorproject/pom.xml" }}
       # Run tests
       - run: cd ~/majorproject/majorproject;mvn test;
-      
+            
       - store_test_results:
           path: ~/majorproject/majorproject/target/surefire-reports
       
       # Package   
       - run: cd ~/majorproject/majorproject;mvn package -Dmaven.test.skip=true -Pprod;
-      
+
       - store_artifacts:
           path: ~/majorproject/majorproject/target/majorproject-0.0.1-SNAPSHOT.jar;
       - run:
@@ -50,11 +66,15 @@ jobs:
           command: |
             aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 145555723369.dkr.ecr.us-east-1.amazonaws.com
             docker-compose push
-            
+ 
 workflows:
  build-deploy-qa:
     jobs:
       - build_and_deploy:
+          filters:
+            branches:
+              only: master
+      - test_frontend:
           filters:
             branches:
               only: master
