Fixed docker files as well as seperating database url

--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -2,10 +2,11 @@ FROM node:12-alpine
 
 COPY project-app/package.json /build/
 COPY project-app/src /build/src/
+COPY project-app/public /build/public
 
 WORKDIR /build/
 
 RUN npm install
 
-EXPOSE 8080
+EXPOSE 3000
 ENTRYPOINT ["npm", "start"]
