--- a/majorproject/Dockerfile
+++ b/majorproject/Dockerfile
@@ -6,4 +6,6 @@ RUN mvn package -Dmaven.test.skip=true -Pprod
 FROM openjdk:8-jre-alpine
 WORKDIR /app
 COPY --from=MAVEN_BUILD build/target/majorproject-0.0.1-SNAPSHOT.jar /app/
-ENTRYPOINT ["java", "-jar", "majorproject-0.0.1-SNAPSHOT.jar"]
+EXPOSE 8080
+EXPOSE 3306
+ENTRYPOINT ["java", "-jar", "-Dspring.datasource.url=jdbc:mariadb://${MARIADB_HOST}:3306/project?createDatabaseIfNotExist=true", "majorproject-0.0.1-SNAPSHOT.jar"]
