--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - store_artifacts:
           path: test-results
   
-  build_and_deploy:
+  test_backend:
     working_directory: ~/majorproject
     docker:
       - image: circleci/openjdk:8-jdk-stretch
@@ -44,12 +44,11 @@ jobs:
             
       - store_test_results:
           path: ~/majorproject/majorproject/target/surefire-reports
-      
-      # Package   
-      - run: cd ~/majorproject/majorproject;mvn package -Dmaven.test.skip=true -Pprod;
 
       - store_artifacts:
           path: ~/majorproject/majorproject/target/majorproject-0.0.1-SNAPSHOT.jar;
+
+  upload_container:
       - run:
           name: Install dependencies for AWS
           command: |
@@ -70,11 +69,18 @@ jobs:
 workflows:
  build-deploy-qa:
     jobs:
-      - build_and_deploy:
+      - test_backend:
           filters:
             branches:
               only: master
       - test_frontend:
+          filters:
+            branches:
+              only: master
+      - upload_container:
+          requires:
+            - test_backend
+            - test_frontend
           filters:
             branches:
               only: master
