--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,21 @@ jobs:
       - image: circleci/node:12
     steps:
       - checkout
+
+      - restore_cache:
+        key: sept-fri-10-30-2-{{ checksum "~/majorproject/FrontEnd/project-app/package.json" }}
+
       - run:
           name: Install npm dependencies
           command: |
             cd ~/majorproject/FrontEnd/project-app;npm install --save
       - run: cd ~/majorproject/FrontEnd/project-app;npm test
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: sept-fri-10-30-2-{{ checksum "~/majorproject/FrontEnd/project-app/package.json" }}
+
       - store_test_results:
           path: test-results
       - store_artifacts:
@@ -26,7 +36,6 @@ jobs:
       - image: circleci/openjdk:8-jdk-stretch
     steps:
       - checkout
-      - setup_remote_docker
       
       - restore_cache:
           key: sept-fri-10-30-2-{{ checksum "~/majorproject/majorproject/pom.xml" }}
@@ -53,6 +62,8 @@ jobs:
     environment:
       FULL_IMAGE_NAME: 145555723369.dkr.ecr.us-east-1.amazonaws.com/project:latests
     steps:
+      - setup_remote_docker
+
       - run:
           name: Install dependencies for AWS
           command: |
@@ -62,11 +73,11 @@ jobs:
             sudo pip3 install --upgrade awscli
       - run:
           name: Build image
-          command: |
+          command: cd ~/majorproject;|
             docker-compose build
       - run:
           name: Push image
-          command: |
+          command: cd ~/majorproject;|
             aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 145555723369.dkr.ecr.us-east-1.amazonaws.com
             docker-compose push
  
