--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,14 +74,11 @@ jobs:
       - run:
           name: Build image
           command: |
-            cd ~/majorproject;
-            docker-compose build
+            cd ~/majorproject;docker-compose build
       - run:
           name: Push image
           command: |
-            cd ~/majorproject;
-            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 145555723369.dkr.ecr.us-east-1.amazonaws.com
-            docker-compose push
+            cd ~/majorproject;aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 145555723369.dkr.ecr.us-east-1.amazonaws.com;docker-compose push
  
 workflows:
  build-deploy-qa:
