--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,6 @@ services:
         ports:
             - "80:3000"
         restart: always
-        stdin_open: true
+        tty: true
         depends_on:
             - majorproject-rest-server
