--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
-version: 2.1
+ersion: 2.1
 orbs:
   aws-ecr: circleci/aws-ecr@6.12.2
   aws-ecs: circleci/aws-ecs@1.3.0
-  
+
 jobs:
   test_frontend:
     working_directory: ~/majorproject
@@ -10,46 +10,61 @@ jobs:
       - image: circleci/node:12
     steps:
       - checkout
+
+      - restore_cache:
+          key: sept-fri-10-30-2-{{ checksum "~/majorproject/FrontEnd/project-app/package.json" }}
+
       - run:
           name: Install npm dependencies
           command: |
             cd ~/majorproject/FrontEnd/project-app;npm install --save
       - run: cd ~/majorproject/FrontEnd/project-app;npm test
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: sept-fri-10-30-2-{{ checksum "~/majorproject/FrontEnd/project-app/package.json" }}
+
       - store_test_results:
           path: test-results
       - store_artifacts:
           path: test-results
-  
-  build_and_deploy:
+
+  test_backend:
     working_directory: ~/majorproject
     docker:
       - image: circleci/openjdk:8-jdk-stretch
-    environment:
-      FULL_IMAGE_NAME: 145555723369.dkr.ecr.us-east-1.amazonaws.com/project:latest
     steps:
       - checkout
-      - setup_remote_docker
-      
+
       - restore_cache:
           key: sept-fri-10-30-2-{{ checksum "~/majorproject/majorproject/pom.xml" }}
-      
+
       - run : cd ~/majorproject/majorproject; mvn dependency:go-offline;
 
       - save_cache:
           paths:
-           - ~/.m2
+            - ~/.m2
           key: sept-fri-10-30-2-{{ checksum "~/majorproject/majorproject/pom.xml" }}
       # Run tests
       - run: cd ~/majorproject/majorproject;mvn test;
-            
+
       - store_test_results:
           path: ~/majorproject/majorproject/target/surefire-reports
-      
-      # Package   
-      - run: cd ~/majorproject/majorproject;mvn package -Dmaven.test.skip=true -Pprod;
 
       - store_artifacts:
           path: ~/majorproject/majorproject/target/majorproject-0.0.1-SNAPSHOT.jar;
+
+  upload_container:
+    working_directory: ~/majorproject
+    docker:
+      - image: circleci/openjdk:8-jdk-stretch
+    environment:
+      FULL_IMAGE_NAME: 145555723369.dkr.ecr.us-east-1.amazonaws.com/project:latests
+    steps:
+      - checkout
+      - setup_remote_docker
+
       - run:
           name: Install dependencies for AWS
           command: |
@@ -60,21 +75,30 @@ jobs:
       - run:
           name: Build image
           command: |
+            cd ~/majorproject;
             docker-compose build
       - run:
           name: Push image
           command: |
-            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 145555723369.dkr.ecr.us-east-1.amazonaws.com
+            cd ~/majorproject;
+            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 145555723369.dkr.ecr.us-east-1.amazonaws.com;
             docker-compose push
- 
+
 workflows:
- build-deploy-qa:
+  build-deploy-qa:
     jobs:
-      - build_and_deploy:
+      - test_backend:
           filters:
             branches:
               only: master
       - test_frontend:
+          filters:
+            branches:
+              only: master
+      - upload_container:
+          requires:
+            - test_backend
+            - test_frontend
           filters:
             branches:
               only: master
